--- a/levelUP/templates/base.html
+++ b/levelUP/templates/base.html
@@ -43,11 +43,10 @@
     <br />
     {% block body %}{% endblock %}
 
-    <div align="center" class="fixed-bottom">
+    <div align="center" class="stickey-bottom">
       <hr id="bottom" />
       levelUP by <span style="color: brown">6488004 & 6488089</span>
       <br />
     </div>
-    <br />
   </body>
 </html>
