--- a/levelUP/templates/base.html
+++ b/levelUP/templates/base.html
@@ -48,5 +48,13 @@
       levelUP by <span style="color: brown">6488004 & 6488089</span>
       <br />
     </div>
+    <script
+      src="{{ url_for('static', filename='dna.js') }}"
+      type="module"
+    ></script>
+    <script
+      src="{{ url_for('static', filename='authHelper.js') }}"
+      type="module"
+    ></script>
   </body>
 </html>
