--- a/levelUP/templates/signup.html
+++ b/levelUP/templates/signup.html
@@ -84,6 +84,7 @@ block body %}
           type="submit"
           class="btn btn-lg btn-primary mb-3"
           align="center"
+          id="signup"
         >
           Signup</button
         ><br />
