--- a/levelUP/templates/login.html
+++ b/levelUP/templates/login.html
@@ -40,6 +40,7 @@ block body %}
           type="submit"
           class="btn btn-lg btn-primary mb-3"
           align="center"
+          id="login"
         >
           Confirm Identity</button
         ><br />
