--- a/levelUP/templates/account.html
+++ b/levelUP/templates/account.html
@@ -22,7 +22,7 @@
           >
           <input
             type="text"
-            class="form-control"
+            class="form-control disable-autocomplete"
             id="inputUsername"
             name="inputUsername"
             placeholder="Username (required)"
@@ -38,7 +38,7 @@
           </label>
           <input
             type="text"
-            class="form-control"
+            class="form-control disable-autocomplete"
             id="firstname"
             name="firstname"
             placeholder="{{acc.fname}}"
@@ -52,7 +52,7 @@
           >
           <input
             type="text"
-            class="form-control"
+            class="form-control disable-autocomplete"
             id="alias"
             name="alias"
             placeholder="{{acc.alias}}"
@@ -66,7 +66,7 @@
           </label>
           <input
             type="password"
-            class="form-control"
+            class="form-control disable-autocomplete"
             id="inputPassword"
             name="inputPassword"
             placeholder="Password"
@@ -79,7 +79,7 @@
           </label>
           <input
             type="password"
-            class="form-control"
+            class="form-control disable-autocomplete"
             id="inputPassword2"
             name="inputPassword2"
             placeholder="Confirm Password"
