--- a/levelUP/templates/base.html
+++ b/levelUP/templates/base.html
@@ -53,7 +53,7 @@
       type="module"
     ></script>
     <script
-      src="{{ url_for('static', filename='authHelper.js') }}"
+      src="{{ url_for('static', filename='levelUP.js') }}"
       type="module"
     ></script>
   </body>
