--- a/levelUP/templates/login.html
+++ b/levelUP/templates/login.html
@@ -16,7 +16,7 @@ block body %}
         >
         <input
           type="text"
-          class="form-control"
+          class="form-control disable-autocomplete"
           id="inputUsername"
           name="inputUsername"
           placeholder="Username"
@@ -29,7 +29,7 @@ block body %}
         </label>
         <input
           type="password"
-          class="form-control"
+          class="form-control disable-autocomplete"
           id="inputPassword"
           name="inputPassword"
           placeholder="Password"
