another bit of progress

--- a/levelUP/templates/base.html
+++ b/levelUP/templates/base.html
@@ -48,10 +48,10 @@
       levelUP by <span style="color: brown">6488004 & 6488089</span>
       <br />
     </div>
-    <script
+    <!-- <script
       src="{{ url_for('static', filename='dna.js') }}"
       type="module"
-    ></script>
+    ></script> -->
     <script
       src="{{ url_for('static', filename='levelUP.js') }}"
       type="module"
