--- a/levelUP/templates/signup.html
+++ b/levelUP/templates/signup.html
@@ -16,7 +16,7 @@ block body %}
         </label>
         <input
           type="text"
-          class="form-control disable-autocomplete"
+          class="form-control"
           id="firstname"
           name="firstname"
           placeholder="First name (not required)"
@@ -43,7 +43,7 @@ block body %}
         >
         <input
           type="text"
-          class="form-control disable-autocomplete"
+          class="form-control"
           id="alias"
           name="alias"
           placeholder="Alias (not required)"
@@ -72,7 +72,7 @@ block body %}
         </label>
         <input
           type="password"
-          class="form-control disable-autocomplete"
+          class="form-control"
           id="inputPassword2"
           name="inputPassword2"
           placeholder="Confirm Password (required)"
