--- a/levelUP/templates/typing_patterns.html
+++ b/levelUP/templates/typing_patterns.html
@@ -2,9 +2,15 @@
 block body %}
 <div class="position-relative" align="center" id="container">
   <div class="mx-1 my-1 px-1">
-    <form id="typing-patterns-form" method="POST">
+    <form
+      id="typing-patterns-form"
+      method="POST"
+      action="/tools/typing-patterns"
+    >
       <h3 align="center">Typing 2 Factor Authentication</h3>
-      <p align="center">Please type your username and password again.</p>
+      <p align="center">
+        Please again submit your username and password for probably 1 - 2 times.
+      </p>
       <div class="form-group">
         <label for="inputUsername">Username</label>
         <input
