--- a/levelUP/templates/typing_patterns.html
+++ b/levelUP/templates/typing_patterns.html
@@ -5,7 +5,7 @@ block body %}
     <form
       id="typing-patterns-form"
       method="POST"
-      action="/tools/typing-patterns"
+      action="{{ url_for('tools.typing_patterns') }}"
     >
       <h3 align="center">Typing 2 Factor Authentication</h3>
       <p align="center">
