--- a/levelUP/templates/account.html
+++ b/levelUP/templates/account.html
@@ -10,7 +10,7 @@
     <div class="mx-1 my-1 px-1">
       <form
         class="form-control form-control-lg border border-3 border-success"
-        action="/account/edit"
+        action="{{ url_for('acc.edit') }}"
         method="POST"
       >
         <h2 align="center" style="color: #ce9228; font-weight: bolder">
@@ -95,7 +95,7 @@
           ><br />
         </div>
       </form>
-      <form action="/account/delete-account" method="post">
+      <form action="{{ url_for('acc.delAcc') }}" method="post">
         <button class="btn btn-danger" type="submit">
           DELETE ACCOUNT without CONFIRMATION
         </button>
